--- a/FRONTEND/src/styles/main.css
+++ b/FRONTEND/src/styles/main.css
@@ -1,3 +1,8 @@
+:root{
+    --navBarBgColor: #fff;
+    --primaryColor: #132644;
+}
+
 *::before, *::after, *{
     box-sizing: border-box;
     margin: 0;
