--- a/FRONTEND/src/styles/navBar.css
+++ b/FRONTEND/src/styles/navBar.css
@@ -46,9 +46,13 @@
     align-items: center;
 }
 
-#searchAnchor{
+.anchorIcon{
     display: flex;
     justify-content: center;
+}
+
+.anchorIcon:hover{
+    scale: 1.1;
 }
 
 .svgOptions{
@@ -58,4 +62,5 @@
 
 .svgOptions:hover{
     cursor: pointer;
+    scale: 1.2;
 }
